# bk_clustering

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
bk_clustering/: __init__.py  main.py  run_batch.py
bk_clustering/utilities/: calculation_utilities.py  cluster_calculations.py  density_peak.py  load_save.py  method_comparison.py  metrics.py  plot_utilities.py  postprocessing.py  preprocessing.py  tree_traversal.py
data/: README.md  dataset_shapes.json
data/anomalies/: annthyroid.arff  arrhythmia.arff  breastw.arff  cardio.arff  ecoli.arff  glass.arff  ionosphere.arff  letter.arff  lympho.arff  mammography.arff  musk.arff  optdigits.arff  pendigits.arff  pima.arff  satimage-2.arff  shuttle.arff  thyroid.arff  vertebral.arff  vowels.arff  wbc.arff  wine.arff
data/real/: CNS.arff  (+51 more)
examples/: Bank Customer Segmentaion.ipynb  Bank Customer Segmentation.ipynb  Customer segmentation example.ipynb  Mall Customer Segmentation.ipynb  Performance testing.ipynb  aggregation_dataset.ipynb  iris_dataset.ipynb
response_code/: clust_eval.py  reviewers_response.txt  solidity_corr.py
results/: affinity_results.json  agglomerative_results.json  birch_results.json  bk_clustering_results.json  dbscan_results.json  density_peak_results.json  gaussian_mixture_results.json  hdbscan_results.json  k_means_results.json  mean_shift_results.json  median_aggregated_results.csv  mini_batch_kmeans_results.json  optics_results.json  solidity_correlation_results.json  solidity_correlation_summary.json
tests/: test_utilities.py
(+12 files in other folders)
